# semester_project

./: .doit.db.bak  .flake8  .gitignore  MANIFEST.in  Pipfile  README.md  bonus.py  button.py  config.py  dodo.py  duck.py  game.pot  game.py  game_object.py  image.py  main_file.py  pyproject.toml  score.txt.db  score.txt.dir  setup.cfg  test.py  test_classes.py  text_object.py  wall.py
Game/: __main__.py  bonus.py  config.py  duck.py  game.py  main_file.py  wall.py
Game.egg-info/: PKG-INFO  SOURCES.txt
Game/en/LC_MESSAGES/: game.mo
Game/ru/LC_MESSAGES/: game.mo
app/: __init__.py  __main__.py  bonus.py  button.py  config.py  duck.py  game.py  image.py  rocket.py  wall.py
app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app_package.egg-info/: PKG-INFO
docs/source/: bonus_doc.rst  button_doc.rst  conf.py  duck_doc.rst  game_doc.rst  game_object_doc.rst  image_doc.rst  main_file_doc.rst  text_object_doc.rst  wall_doc.rst
game_project.egg-info/: PKG-INFO  top_level.txt
main_file.egg-info/: PKG-INFO
po/: game.pot
po/en/LC_MESSAGES/: game.mo  game.po
po/ru/LC_MESSAGES/: LC_MESSAGES - Ярлык.lnk  game.mo  game.po
tests/: __init__.py
