[metadata]
name = app
version = 0.0.2
url = https://github.com/loechka/semester_project
authors = Gorbatova Elena, Loiko Anna
authors_group = 514
description = Exam project for PythonDevelopment2021 course
long_description = file: README.md
    

[options] 
packages = app
include_package_data = True
install_requires =
    config==0.5.0.post0
    pygame==2.0.1
    pyfiglet==0.8.post1

[options.entry_points]
console_scripts =
    DateTime = app.__main__:main

[options.package_data]
app = */*/game.mo
images = images/*.png

[options.data_files]
images = images/background.png, images/square.png, images/duck.png, images/horse.png,  images/block.png, images/bonus_star.png, images/bonus_bomb.png, images/bonus_heart.png
sound = sound/music.mp3, sound/wall.wav, sound/bonus.wav